Use 'Add app' language

--- a/templates/app-store-item.html
+++ b/templates/app-store-item.html
@@ -60,7 +60,7 @@
           {% if not request.GET.q %}
           Add to project folder
           {% else %}
-          Start app
+          Add app
           {% endif %}
         </button>
       </form>
