--- a/templates/project.html
+++ b/templates/project.html
@@ -320,7 +320,7 @@
                     <div class="question-title">
 
                       {% if can_begin_module and rec.question.spec.protocol %}
-                      <small><i>Choose</i></small><br>
+                      <small>Add app</small><br>
                       {% endif %}
                       {{rec.question.spec.title}}
                     </div>
