--- a/templates/project.html
+++ b/templates/project.html
@@ -319,11 +319,8 @@
                     {% endif %}
 
                     <div class="question-title">
-
-                      {% if can_begin_module and rec.question.spec.protocol %}
-                      <small>Add app</small><br>
-                      {% endif %}
-                      {{rec.question.spec.title}}
+                      <!--{% if can_begin_module and rec.question.spec.protocol %}Add {% endif %} -->
+                        {{rec.question.spec.title}}
                     </div>
 
                     {% if layout_mode == "rows" %}
