Stop using 'App Store' phrase

--- a/templates/app-store-item-start.html
+++ b/templates/app-store-item-start.html
@@ -2,7 +2,7 @@
 {% load bootstrap3 %}
 
 {% block title %}
-{{app.title}} - App Store
+{{app.title}} - Compliance Apps
 {% endblock %}
 
 {% block head %}
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<li class="active"><a href="/store">Compliance App Store</a></li>
+<li class="active"><a href="/store">Compliance Apps</a></li>
 <li class="active">{{app.title|truncatewords:6}}</li>
 {% endblock %}
 
