--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Compliance App Store
+Compliance Apps
 {% endblock %}
 
 {% block head %}
@@ -64,13 +64,13 @@ h1 {
 {% endblock %}
 
 {% block breadcrumbs %}
-<li class="active">App Store</li>
+<li class="active">Compliance Apps</li>
 {% endblock %}
 
 {% block body %}
 <h1>
   <img alt="GovReady Q logo" src="{% static "img/brand/govready_logo_transparent.png" %}" width="190px" style="margin-top:-18.5px;">
-  App Store
+  Compliance Apps
 </h1>
 
 {% if filter_description %}
