--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/projects">Project Folders</a></li>
-                <li><a href="/store">App Store</a></li>
+                <li><a href="/store">Compliance Apps</a></li>
                 {% if user.can_see_org_settings or user.is_staff %}
                   <li role="separator" class="divider"></li>
                 {% endif %}
