--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -114,7 +114,7 @@
         <div id="discussion-your-comment"></div>
         <div id="discussion-your-comment-saved" style="display: none; float: right; margin-top: 2px; font-size: 12px; color: #666;"></div>
         <div id="discussion-your-comment-tips">
-         <label for="discussion-attach-file">Attach a File</label>
+         <label for="discussion-attach-file"><span class="glyphicon glyphicon-paperclip" style="margin-right: 3px"></span>Attach a File</label>
          <div style="display: none">
             <input name="value" type="file" id="discussion-attach-file" multiple onchange="attach_files(this.files)" />
          </div>
