FormData.set is Chrome/FF-only so far but FormData.append has long been standardized

--- a/templates/question.html
+++ b/templates/question.html
@@ -728,7 +728,7 @@ $(function() {
 
         {% if q.spec.type == "longtext" %}
         // Add the rich text.
-        data.set("value", window.inputctrl_quill.getContentsAsCommonMark());
+        data.append("value", window.inputctrl_quill.getContentsAsCommonMark());
         {% endif %}
 
         ajax_with_indicator({
